# coinbase-pro-one-rs

./: .gitignore  Cargo.toml  README.md  credentials.json.template  run_one.sh
.github/workflows/: ci.yaml
examples/: one.rs
original-src/: Cargo.toml
original-src/src/: error.rs
src/: client.rs  conduit.rs  error.rs  errors.rs  lib.rs  structs.rs  utils.rs
src/book/: l2.rs  l3.rs  mod.rs  ticker.rs
tests.bk/: private.rs  ws.rs
