[package]
edition = "2018"
name = "coinbase-pro-one-rs"
version = "0.0.1"
authors = ["ae <alson@alsonkemp.com>"]
repository = "https://github.com/alsonkemp/coinbase-pro-one-rs"
description = "Async Coinbase pro client for Rust (fused WS+REST) (See: coinbase-pro-rs)"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "async", "exchange", "coinbase", "bitcoin", "websocket" ]
homepage = "https://github.com/alsonkemp/coinbase-pro-one-rs"
publish = false

[dependencies]
base64 = ""
chrono = { version = "", features = [ "serde" ] }
rust-crypto = ""
futures = ""
futures-channel = ""
futures-util = { version = "0.3", features = ["async-await", "sink", "std"] }
log = ""
pretty_env_logger = ""
reqwest = { version = "^0.10"}
serde = ""
serde_json = ""
serde_derive = ""
sha2 = ""
time = ""
tokio = { version = "0.2.21", features = ["io-std", "macros", "stream", "time"] }
tokio-tungstenite = { version = "*", features = [ "stream" ] }
url = ""
uuid = { version = "", features = [ "serde", "v4" ] }

