[package]
edition = "2018"
name = "coinbase-pro-one-rs"
version = "0.0.1"
authors = ["ae <alson@alsonkemp.com>"]
repository = "https://github.com/alsonkemp/coinbase-pro-one-rs"
description = "Async Coinbase pro client for Rust (fused WS+REST) (See: coinbase-pro-rs)"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "async", "exchange", "coinbase", "bitcoin", "websocket" ]
homepage = "https://github.com/alsonkemp/coinbase-pro-one-rs"
publish = false

[dependencies]
async-tls = "0.9.0"
async-tungstenite = {version = "*", features = ["async-std-runtime", "async-tls"] }
async-std = { version = "", features = [ "std", "unstable" ] }
base64 = "*"
chrono = { version = "*", features = [ "serde" ] }
futures = "*"
futures-util = "*"
log = "*"
pretty_env_logger = "*"
reqwest = { version = "^0.10", features = [ "blocking" ] }
rust-crypto = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
sha2 = "*"
time = "*"
url = "*"
uuid = { version = "*", features = [ "serde", "v4" ] }

