[package]
edition = "2018"
name = "coinbase-pro-one-rs"
version = "0.0.1"
authors = ["ae <alson@alsonkemp.com>"]
repository = "https://github.com/alsonkemp/coinbase-pro-one-rs"
description = "Async Coinbase pro client for Rust (fused WS+REST) (See: coinbase-pro-rs)"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "async", "exchange", "coinbase", "bitcoin", "websocket" ]
homepage = "https://github.com/alsonkemp/coinbase-pro-one-rs"
publish = false

[profile.release]
opt-level = "s"

[dependencies]
async-tungstenite = { version = "0.8.0",         default-features = false, features = ["async-std-runtime", "real-async-native-tls"] }
async-std         = { version = "1.6.3",         default-features = false, features = [ "std", "unstable" ] }
base64            = { version = "0.12.3",        default-features = false}
chrono            = { version = "0.4.15",        default-features = false, features = [ "alloc", "clock", "serde", "std" ] }
env_logger        = { version = "0.7.1",         default-features = false }
futures           = { version = "0.3.5",         default-features = false }
futures-util      = { version = "0.3.5",         default-features = false, features = [ "io" ] }
log               = { version = "0.4.11",        default-features = false }
ordered-float     = { version = "2.0",           default-features = false }
pretty_env_logger = { version = "0.4.0",         default-features = false }
rust-crypto       = { version = "0.2.36",        default-features = false }
serde             = { version = "1.0.115",       default-features = false, features = [ "derive" ] }
serde_json        = { version = "1.0.57",        default-features = false }
surf              = { version = "2.0.0-alpha.4", default-features = false }
time              = { version = "0.2.16",        default-features = false }
url               = { version = "2.1.1",         default-features = false }
uuid              = { version = "0.8.1",         default-features = false,features = [ "serde", "v4" ] }
